* `@TempDir` `spock.tempDir.keep` has been replaced by `spock.tempdir.cleanup`. See <<extensions.adoc#temp-dir-cleanup,TempDir Cleanup>> spockPull:1525[]

=== Misc

* Fix vararg handling in SpyStatic spockIssue:2161[]
* Fix incompatibility with JUnit 6 in OSGi environment spockIssue:2231[]
* OSGi: Pin the `Require-Capability:osgi.ee=JavaSE` to Java `8` spockPull:2233[]

== 2.4-M6 (2025-04-15)

=== Highlights

* Add support for defining condition blocks with implicit assertions in helper methods annotated with `@Verify` or `@VerifyAll` spockPull:2112[]

=== Breaking Changes

* _This affects users of the `@Snapshot` extension, only if you were using the snapshotter in parent specification classes._ +
`@Snapshot` used to look up snapshots in directories named after the class containing feature methods. Now, the snapshots will be loaded from directories named after the bottom class in the specification hierarchy. The motivation of the change is to allow users to define features in base specification classes, but overwrite expected snapshots per child specification.
spockPull:2112[]

=== Misc

* Improve publish module-alignment metadata spockPull:2082[]
* Improve render multidimensional arrays in comparisons and invocation matchers spockPull:2107[]
* Improve replace unnecessary reflection spockPull:2115[]
* Fix ExtensionException in OSGi environment for global extension spockIssue:2076[]
** This issue was introduced with spockPull:1995[]
* Fix `@RestoreSystemProperties` not restoring state between iterations of a data-driven feature spockIssue:2104[]
* Fix `VerifyError: Stack map does not match the one at exception handler` introduced in 2.4-M5 spockIssue:2080[]
* Fix throw `SpockMultipleFailuresError` instead of a generic `MultipleFailuresError` in case of multiple failed assertions spockPull:2112[]
* Fix cross-multiplication of multi-assignment data providers spockPull:2078[]